[gd_scene load_steps=14 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://TileMap.gd" type="Script" id=4]
[ext_resource path="res://monogram.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://tower.png" type="Texture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=5]
0/name = "tower.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 192, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 8 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tower.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tower.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 128, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tower.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 256, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 5 )

[node name="Root" type="Node2D"]
position = Vector2( 0, 1 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Game"]
anchor_mode = 0
current = true

[node name="CanvasModulate" type="CanvasModulate" parent="Game"]
scale = Vector2( 1, 0.2 )

[node name="Timer" type="Timer" parent="Game"]
autostart = true

[node name="TileMap" type="TileMap" parent="Game"]
tile_set = SubResource( 5 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 1, 0, 131080, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 0, 0, 458760, 0, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 0, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 0, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 0, 0, 655367, 1, 0, 655368, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 1, 0, 720904, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 1, 0, 851972, 2, 0, 851973, 1, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0 )
script = ExtResource( 4 )

[node name="HUD" type="Node2D" parent="Game"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Game/HUD"]
margin_top = 899.0
margin_right = 576.0
margin_bottom = 1027.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Game/HUD/HBoxContainer"]
margin_right = 302.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Game/HUD/HBoxContainer/VBoxContainer"]
margin_right = 302.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Game/HUD/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Fuck me"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Game/HUD/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Fuck me"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Game/HUD/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 302.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Fuck me"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Game/HUD/HBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 302.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "two times
"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Game/HUD/HBoxContainer"]
margin_left = 306.0
margin_right = 576.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Game/HUD/HBoxContainer/HBoxContainer"]
margin_right = 87.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
toggle_mode = true
flat = true

[node name="Button2" type="Button" parent="Game/HUD/HBoxContainer/HBoxContainer"]
margin_left = 91.0
margin_right = 178.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
toggle_mode = true
flat = true

[node name="Button3" type="Button" parent="Game/HUD/HBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 270.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
toggle_mode = true
flat = true

[node name="Menu" type="Node2D" parent="Game"]
script = ExtResource( 3 )

[node name="Title" type="Label" parent="Game/Menu"]
margin_left = 139.0
margin_top = 56.0
margin_right = 454.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 1 )
text = "CIRCLES
VS
SQUARES"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Game/Menu"]
margin_left = 149.0
margin_top = 394.0
margin_right = 429.0
margin_bottom = 853.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 41
alignment = 1

[node name="Start_Button" type="Button" parent="Game/Menu/VBoxContainer"]
margin_right = 280.0
margin_bottom = 125.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "START"
flat = true

[node name="Options_Button" type="Button" parent="Game/Menu/VBoxContainer"]
margin_top = 166.0
margin_right = 280.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "OPTIONS"
flat = true

[node name="Exit_Button" type="Button" parent="Game/Menu/VBoxContainer"]
margin_top = 333.0
margin_right = 280.0
margin_bottom = 459.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "EXIT"
flat = true

[connection signal="timeout" from="Game/Timer" to="Game/TileMap" method="_on_Timer_timeout"]
[connection signal="toggled" from="Game/HUD/HBoxContainer/HBoxContainer/Button" to="Game/HUD" method="_on_Button_toggled"]
[connection signal="toggled" from="Game/HUD/HBoxContainer/HBoxContainer/Button2" to="Game/HUD" method="_on_Button2_toggled"]
[connection signal="toggled" from="Game/HUD/HBoxContainer/HBoxContainer/Button3" to="Game/HUD" method="_on_Button3_toggled"]
[connection signal="pressed" from="Game/Menu/VBoxContainer/Start_Button" to="Game" method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Game/Menu/VBoxContainer/Exit_Button" to="Game" method="_on_Exit_Button_pressed"]
